--- a/main_new.html
+++ b/main_new.html
@@ -471,19 +471,19 @@
     <div class="row">
       <div class="col-md-4">
         <div class="counting right-border">
-          <span class="amount stars" data-count="25000">0</span>
+          <span class="amount stars">25000</span>
           <h4 class="title small red">ТАЛАНТОВ</h4>
         </div>
       </div>
       <div class="col-md-4">
         <div class="counting right-border">
-          <span class="amount film-makers" data-count="50000">0</span>
+          <span class="amount film-makers">50000</span>
           <h4 class="title small red">КИНОДЕЯТЕЛЕЙ</h4>
         </div>
       </div>
       <div class="col-md-4">
         <div class="counting">
-          <span class="amount companies" data-count="35000">0</span>
+          <span class="amount companies">35000</span>
           <h4 class="title small red">КОМПАНИЙ</h4>
         </div>
       </div>
