--- a/step_one.html
+++ b/step_one.html
@@ -48,149 +48,151 @@
         <h3 class="title underlined uppercase">Общие данные</h3>
       </div>
       <div class="row">
-        <form class="form col-12">
-          <h3 class="red"> обязательные поля для заполнения (*)</h3>
-          <div class="input-blocks">
-            <div class="row">
-              <div class="col-3">
-                <label>Имя*</label>
-              </div>
-              <div class="col-9">
-                <input type="text">
-              </div>
-            </div>
-          </div>
-          <div class="input-blocks">
-            <div class="row">
-              <div class="col-3">
-                <label>Фамилия*</label>
-              </div>
-              <div class="col-9">
-                <input type="text">
+        <div class="col-12">
+          <form class="form">
+            <h3 class="red"> обязательные поля для заполнения (*)</h3>
+            <div class="input-blocks">
+              <div class="row">
+                <div class="col-3">
+                  <label>Имя*</label>
+                </div>
+                <div class="col-9">
+                  <input type="text">
+                </div>
               </div>
             </div>
-          </div>
-          <div class="input-blocks">
-            <div class="row">
-              <div class="col-3">
-                <label>Отчество*</label>
-              </div>
-              <div class="col-9">
-                <input type="text">
-              </div>
-            </div>
-          </div>
-          <div class="input-blocks">
-            <div class="row">
-              <div class="col-3">
-                <label>Номер телефона 1*</label>
-              </div>
-              <div class="col-9">
-                <input type="text">
+            <div class="input-blocks">
+              <div class="row">
+                <div class="col-3">
+                  <label>Фамилия*</label>
+                </div>
+                <div class="col-9">
+                  <input type="text">
+                </div>
               </div>
             </div>
-          </div>
-          <div class="input-checkbox">
-            <div class="row">
-              <div class="col-9">
-                <input type="radio" id="whats" name="contact" value="whats_app">
-                <label for="whats">WhatsApp</label>
-                <input type="radio" id="telegram" name="contact" value="telegram">
-                <label for="telegram">Telegram</label>
+            <div class="input-blocks">
+              <div class="row">
+                <div class="col-3">
+                  <label>Отчество*</label>
+                </div>
+                <div class="col-9">
+                  <input type="text">
+                </div>
               </div>
             </div>
-          </div>
+            <div class="input-blocks">
+              <div class="row">
+                <div class="col-3">
+                  <label>Номер телефона 1*</label>
+                </div>
+                <div class="col-9">
+                  <input type="text">
+                </div>
+              </div>
+            </div>
+            <div class="input-checkbox">
+              <div class="row">
+                <div class="col-9">
+                  <input type="radio" id="whats" name="contact" value="whats_app">
+                  <label for="whats">WhatsApp</label>
+                  <input type="radio" id="telegram" name="contact" value="telegram">
+                  <label for="telegram">Telegram</label>
+                </div>
+              </div>
+            </div>
 
-          <div class="input-blocks">
-            <div class="row">
-              <div class="col-3">
-                <label>Номер телефона 2*</label>
-              </div>
-              <div class="col-9">
-                <input type="text">
+            <div class="input-blocks">
+              <div class="row">
+                <div class="col-3">
+                  <label>Номер телефона 2*</label>
+                </div>
+                <div class="col-9">
+                  <input type="text">
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="input-checkbox">
-            <div class="row">
-              <div class="col-9">
-                <input type="radio" id="whats-second" name="contact-second" value="whats-app-second">
-                <label v>WhatsApp</label>
-                <input type="radio" id="telegram-second" name="contact-second" value="telegram-second">
-                <label for="telegram-second">Telegram</label>
+            <div class="input-checkbox">
+              <div class="row">
+                <div class="col-9">
+                  <input type="radio" id="whats-second" name="contact-second" value="whats-app-second">
+                  <label v>WhatsApp</label>
+                  <input type="radio" id="telegram-second" name="contact-second" value="telegram-second">
+                  <label for="telegram-second">Telegram</label>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="input-blocks gender">
-            <div class="row">
-              <div class="col-3">
-                <label>Пол*</label>
+            <div class="input-blocks gender">
+              <div class="row">
+                <div class="col-3">
+                  <label>Пол*</label>
+                </div>
+                <div class="col-9">
+                  <input type="radio" id="women" name="gender" value="women">
+                  <label for="women">Женский</label>
+                  <input type="radio" id="men" name="gender" value="men">
+                  <label for="men">Мужской</label></div>
               </div>
-              <div class="col-9">
-                <input type="radio" id="women" name="gender" value="women">
-                <label for="women">Женский</label>
-                <input type="radio" id="men" name="gender" value="men">
-                <label for="men">Мужской</label></div>
             </div>
-          </div>
 
 
-          <div class="input-blocks">
-            <div class="row">
-              <div class="col-3">
-                <label>Email*</label>
-              </div>
-              <div class="col-9">
-                <input type="text">
-              </div>
-            </div>
-          </div>
-          <div class="input-blocks">
-            <div class="row">
-              <div class="col-3">
-                <label>Дата рождения*</label>
-              </div>
-              <div class="col-9">
-                <input type="text">
+            <div class="input-blocks">
+              <div class="row">
+                <div class="col-3">
+                  <label>Email*</label>
+                </div>
+                <div class="col-9">
+                  <input type="text">
+                </div>
               </div>
             </div>
-          </div>
-          <div class="input-blocks">
-            <div class="row">
-              <div class="col-3">
-                <label>Город*</label>
-              </div>
-              <div class="col-9">
-                <input type="text">
-              </div>
-            </div>
-          </div>
-          <div class="input-blocks">
-            <div class="row">
-              <div class="col-3">
-                <label>Страна*</label>
-              </div>
-              <div class="col-9">
-                <input type="text">
+            <div class="input-blocks">
+              <div class="row">
+                <div class="col-3">
+                  <label>Дата рождения*</label>
+                </div>
+                <div class="col-9">
+                  <input type="text">
+                </div>
               </div>
             </div>
-          </div>
-          <div class="input-blocks">
-            <div class="row">
-              <div class="col-3">
-                <label>Гражданство*</label>
-              </div>
-              <div class="col-9">
-                <input type="text">
+            <div class="input-blocks">
+              <div class="row">
+                <div class="col-3">
+                  <label>Город*</label>
+                </div>
+                <div class="col-9">
+                  <input type="text">
+                </div>
               </div>
             </div>
-          </div>
-        </form>
+            <div class="input-blocks">
+              <div class="row">
+                <div class="col-3">
+                  <label>Страна*</label>
+                </div>
+                <div class="col-9">
+                  <input type="text">
+                </div>
+              </div>
+            </div>
+            <div class="input-blocks">
+              <div class="row">
+                <div class="col-3">
+                  <label>Гражданство*</label>
+                </div>
+                <div class="col-9">
+                  <input type="text">
+                </div>
+              </div>
+            </div>
+            <button class="forward button">сохранить</button>
+          </form>
+        </div>
       </div>
 
 
-      <a href="#" class="forward button">сохранить</a>
     </section>
 
     <!-- SECTION 2 -->
@@ -202,28 +204,31 @@
       <div class="row">
         <h3 class="title underlined uppercase">выберите род вашей деятельности</h3>
         <div class="col-12">
-          <form class="activity-form">
-            <div class="activity-blocks">
-              <input type="radio" id="talent" name="activity" value="talent">
-              <label for="talent">Талант</label>
-              <p>актер, певец, танцор, акробат, модель, каскадер и прочии</p>
+          <form>
+            <div class="activity-form">
+              <div class="activity-blocks">
+                <input type="radio" id="talent" name="activity" value="talent">
+                <label for="talent">Талант</label>
+                <p>актер, певец, танцор, акробат, модель, каскадер и прочии</p>
+              </div>
+              <div class="activity-blocks">
+                <input type="radio" id="filmmaker" name="activity" value="filmmaker">
+                <label for="filmmaker">Кинодеятель</label>
+                <p>режиссер, оператор, композитор, сценарист, художник, гример, костюмер, кастинг-директор и прочии</p>
+              </div>
+              <div class="activity-blocks">
+                <input type="radio" id="company" name="activity" value="company">
+                <label for="company">Компания</label>
+                <p>кинокомпания, продакшн, ивент агентство, маркетинговое агентство, рекламное агентство и прочии</p>
+              </div>
             </div>
-            <div class="activity-blocks">
-              <input type="radio" id="filmmaker" name="activity" value="filmmaker">
-              <label for="filmmaker">Кинодеятель</label>
-              <p>режиссер, оператор, композитор, сценарист, художник, гример, костюмер, кастинг-директор и прочии</p>
-            </div>
-            <div class="activity-blocks">
-              <input type="radio" id="company" name="activity" value="company">
-              <label for="company">Компания</label>
-              <p>кинокомпания, продакшн, ивент агентство, маркетинговое агентство, рекламное агентство и прочии</p>
-            </div>
+
+            <button class="forward button">сохранить</button>
           </form>
         </div>
       </div>
 
 
-      <a href="#" class="forward button">сохранить</a>
     </section>
 
     <!-- SECTION 3 -->
@@ -280,7 +285,7 @@
           </div>
 
 
-          <a href="#" class="forward button">сохранить</a>
+          <button class="forward button">сохранить</button>
         </div>
       </div>
     </section>
