--- a/step_two.html
+++ b/step_two.html
@@ -943,6 +943,20 @@
                     <option>Свободный</option>
                   </select>
                 </div>
+
+
+                  <div class="col-3">
+                    <div class="calculator">
+                      <h6 class="language-title">Добавить</h6>
+                      <button id="increment"
+                              class="count-button plus" type="button"></button>
+                      <input id="visitorsCounter" class="button input counter" type="number" readonly min="1" max="5"
+                             value="1">
+                      <button id="decrement"
+                              class="count-button minus" type="button" disabled></button>
+                    </div>
+                  </div>
+
               </div>
             </div>
 
