--- a/step_two.html
+++ b/step_two.html
@@ -43,7 +43,7 @@
     <h4>анкета актера</h4>
 
     <section>
-      <form class="form">
+      <form class="forms">
         <div class="row">
           <h3 class="title underlined uppercase">Анкета актера</h3>
           <div class="activity-info">
@@ -74,9 +74,10 @@
             </div>
           </div>
 
-          <button class="forward button">сохранить</button>
-
         </div>
+
+
+        <button class="forward button">сохранить</button>
       </form>
     </section>
 
@@ -158,6 +159,7 @@
                 </div>
               </div>
             </div>
+
             <button class="forward button">сохранить</button>
           </form>
         </div>
@@ -391,8 +393,10 @@
                 </div>
               </div>
             </div>
+
             <button class="forward button">сохранить</button>
           </form>
+
         </div>
       </div>
     </section>
@@ -534,7 +538,9 @@
                 </div>
               </div>
 
+
               <button class="forward button">сохранить</button>
+
             </form>
 
 
@@ -926,50 +932,50 @@
       </div>
       <div class="row">
         <div class="col-9">
-          <form class="form">
+          <form class="inputs">
 
-            <div class="input-blocks">
-              <div class="row">
-                <div class="col-4">
-                  <label>язык</label>
-                  <select>
-                    <option>Русский</option>
-                    <option>Казахский</option>
-                    <option>Французский</option>
-                    <option>Немецкий</option>
-                    <option>Испанский</option>
-                    <option>Итальянский</option>
-                    <option>Украинский</option>
-                    <option>Белорусский</option>
-                    <option>Японский</option>
-                    <option>Китайский</option>
-                  </select>
-                </div>
+            <div class="input">
+              <div class="add-input">
 
-                <div class="col-4">
-                  <label>Уровень</label>
-                  <select>
-                    <option>Базовый</option>
-                    <option>Разговорный</option>
-                    <option>Свободный</option>
-                  </select>
-                </div>
+                <div class="input-blocks">
+                  <div class="row">
+                    <div class="col-4">
+                      <label>язык</label>
+                      <select>
+                        <option>Русский</option>
+                        <option>Казахский</option>
+                        <option>Французский</option>
+                        <option>Немецкий</option>
+                        <option>Испанский</option>
+                        <option>Итальянский</option>
+                        <option>Украинский</option>
+                        <option>Белорусский</option>
+                        <option>Японский</option>
+                        <option>Китайский</option>
+                      </select>
+                    </div>
 
-
-                <div class="col-3">
-                  <div class="calculator">
-                    <h6 class="language-title">Добавить</h6>
-                    <button id="increment"
-                            class="count-button plus" type="button"></button>
-                    <input id="visitorsCounter" class="button input counter" type="number" readonly min="1" max="5"
-                           value="1">
-                    <button id="decrement"
-                            class="count-button minus" type="button" disabled></button>
+                    <div class="col-4">
+                      <label>Уровень</label>
+                      <select>
+                        <option>Базовый</option>
+                        <option>Разговорный</option>
+                        <option>Свободный</option>
+                      </select>
+                    </div>
                   </div>
-                </div>
 
+                </div>
               </div>
+
+              <div class="calculator">
+                <h6 class="language-title">Добавить</h6>
+                <button id="increment" class="count-button plus" type="button"></button>
+                <button id="decrement" class="count-button minus" type="button"></button>
+              </div>
+
             </div>
+
 
           </form>
         </div>
@@ -1590,12 +1596,12 @@
 
       <div class="row">
         <div class="col-12">
-          <form class="personal-contacts">
+          <form class="inputs">
             <h3>Добавить персональные контакты</h3>
 
 
-            <div class="personal">
-              <div class="input-phone">
+            <div class="input">
+              <div class="add-input">
 
                 <div class="input-blocks">
                   <div class="row">
@@ -1609,6 +1615,7 @@
                 </div>
 
               </div>
+
               <div>
                 <div class="calculator">
                   <button class="count-button plus" type="button"></button>
@@ -1616,6 +1623,7 @@
                   <button class="count-button minus" type="button"></button>
                 </div>
               </div>
+
             </div>
 
 
