Объединил шаги, свертсал анкеты кинодеятеля и компании, переверстал анкету таланта

--- a/registration.html
+++ b/registration.html
@@ -59,16 +59,46 @@
 
             <div class="form-box">
               <form action="">
-                <input type="text" placeholder="ваше имя">
-                <input type="text" placeholder="ваша фамилия">
-                <input type="email" placeholder="email">
-                <input type="password" placeholder="пароль">
-                <input type="password" placeholder="подтвердите пароль">
-                <div class="form-checkbox">
-                  <input type="checkbox" id="checkbox">
-                  <label class="bg-white" for="checkbox">Регистрируясь, Вы принимаете все условия использования
-                    сервиса, политику конфиденциальности и соглашаетесь с обработкой персональных данных</label>
+                <div class="inputs">
+                  <input type="text" placeholder="ваше имя">
+                  <input type="text" placeholder="ваша фамилия">
+                  <input type="email" placeholder="email">
+                  <input type="password" placeholder="пароль">
+                  <input type="password" placeholder="подтвердите пароль">
+                  <div class="form-checkbox">
+                    <input type="checkbox" id="checkbox">
+                    <label class="bg-white" for="checkbox">Регистрируясь, Вы принимаете все условия использования
+                      сервиса, политику конфиденциальности и соглашаетесь с обработкой персональных данных</label>
+                  </div>
                 </div>
+
+
+                <div class="careers-checkbox">
+                  <h3 class="title underlined mb uppercase">Выберите род вашей деятельности</h3>
+                  <div class="careers">
+
+                    <div class="career">
+                      <input type="radio" id="talent1" name="activity" value="talent">
+                      <label class="red" for="talent1">Талант</label>
+                      <p class="description">актер, певец, танцор, акробат, модель, каскадер и прочии</p>
+                    </div>
+
+                    <div class="career">
+                      <input type="radio" id="talent2" name="activity" value="talent">
+                      <label class="red" for="talent2">кинодеятель</label>
+                      <p class="description">режиссер, оператор, композитор, сценарист, художник, гример, костюмер, кастинг-директор и
+                        другие</p>
+                    </div>
+
+                    <div class="career">
+                      <input type="radio" id="talent3" name="activity" value="talent">
+                      <label class="red" for="talent3">компания</label>
+                      <p class="description">кинокомпания, продакшн, ивент агентство, маркетинговое агентство, рекламное агентство и
+                        другие</p>
+                    </div>
+                  </div>
+                </div>
+
                 <button class="button">зарегистрироваться</button>
               </form>
 
